--- a/ios-steamguard-extractor/ios-steamguard-extractor.csproj
+++ b/ios-steamguard-extractor/ios-steamguard-extractor.csproj
@@ -51,7 +51,9 @@
       <HintPath>..\packages\plist-cil.1.14\lib\plist-cil.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <HintPath>..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite, Version=1.0.104.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
