--- a/iOSSteamGuardExtractor/iOSSteamGuardExtractor.csproj
+++ b/iOSSteamGuardExtractor/iOSSteamGuardExtractor.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="6.0.0-preview.5.21301.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="plist-cil" Version="2.2.0" />
+    <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.0.5-pre20210521085756" />
+    <PackageReference Include="SQLitePCLRaw.core" Version="2.0.5-pre20210521085756" />
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)'=='Debug'">
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.6" />
